# Multi-Robot-Autonomous-Robot-System

./: .gitattributes  .gitignore  README.md  carter1_map.pgm  carter1_map.yaml  carter2_map.pgm  carter2_map.yaml  codecov.yml  coverage.filtered  coverage.info  frames_2024-08-24_22.38.19.gv  merged_map.pgm  merged_map.yaml  merged_map_enhanced.pgm
.github/workflows/: ros2_ci.yml  run-unit-test-and-upload-codecov.yml
carter_navigation/launch/: multiple_robot_carter_navigation_hospital.launch.py
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/include/frontier_explorer/: frontier_explorer.hpp.func-sort-c.html  frontier_explorer.hpp.func.html  frontier_explorer.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/src/: frontier_explorer.cpp.func-sort-c.html  frontier_explorer.cpp.func.html  frontier_explorer.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
environments/: L_beach_room.usd  L_factory_cube_room.usd  L_factory_room.usd  single_carter_room.usd  three_carter_room.usd
environments/assets/: carters.usd  panda.usd
install/: local_setup.sh  setup.sh
install/walker/lib/walker/: robot_control
install/walker/share/ament_index/resource_index/parent_prefix_path/: walker
install/walker/share/walker/: package.sh
install/walker/share/walker/launch/: walker_launch.py
log/: latest_build
map & frames/: carter1_map.pgm  carter2_map.pgm  carter2_map.yaml  frames_2024-11-27_16.26.32.gv  merged_map.yaml  merged_map_enhanced.pgm
results/: clang_tidy_output.txt  cpplint_output.txt
results/merged map/: carter_hospital_navigation.yaml
robot_interface/: CMakeLists.txt  package.xml
src/carter_explorer/: CMakeLists.txt  package.xml
src/carter_explorer/config/: carter1_slam_config.yaml  carter2_slam_config.yaml  carter_exploration.rviz
src/carter_explorer/launch/: carter_slam.launch.py  multi_carter_exploration.launch.py
src/carter_explorer/src/: frontier_explorer.cpp  multi_carter_frontier_explorer.cpp  simple_slam_explorer.cpp
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/include/: simple_tf_kinematics.hpp
src/cpp_pkg/src/: llama_controller.cpp  simple_tf_kinematics.cpp
src/cpp_pkg/test/: test_simple_tf_kinematics.cpp
src/frontier_explorer/: CMakeLists.txt  package.xml
src/frontier_explorer/config/: slam_toolbox_config.yaml
src/frontier_explorer/include/frontier_explorer/: backup.hpp  frontier_explorer.hpp
src/frontier_explorer/launch/: complete.launch.xml  slam.launch.xml
src/frontier_explorer/src/: backup.cpp  frontier_explorer.cpp  main.cpp
src/frontier_explorer/test/: frontier_explorer_test.cpp
src/map_merger/: map_merger.py
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/config/: robot_controller.yaml
src/robot_controller/include/: simple_controller.hpp
src/robot_controller/launch/: controller.launch.py
src/robot_controller/src/: simple_controller.cpp
src/robot_interface/: package.xml
src/robot_urdf/: CMakeLists.txt  package.xml
src/robot_urdf/launch/: display.launch.py  gazebo_sim.launch.py
src/robot_urdf/meshes/: base_link.STL  caster_link_left.STL  caster_link_right.STL  caster_wheel_link_left.STL  caster_wheel_link_right.STL  drive_wheel_link_left.STL  drive_wheel_link_right.STL
src/robot_urdf/rviz/: urdf_config.rviz
src/robot_urdf/src/: twist_to_twiststamped.cpp
src/robot_urdf/urdf/: robot_urdf.csv  robot_urdf.urdf.xacro  robot_urdf_control.xacro  robot_urdf_gazebo.xacro
tb3_autonomy/: CMakeLists.txt
tb3_autonomy/bt_xml/: tree.xml
tb3_autonomy/config/: sim_house_locations.yaml
tb3_autonomy/launch/: autonomy.launch.py
tb3_autonomy/src/: navigation_behaviors.cpp
walker/: compile_commands.json
walker/src/: walker_node.cpp
